<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@drawable/bgdesign"
    tools:context=".authenticate.RegistrationActivity">

    <TextView
        android:id="@+id/txt_new_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:text="@string/create_account"
        android:textColor="@color/teal_700"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_MobileNumber_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_new_title"
        android:background="@drawable/editformat"
        android:hint="@string/full_name_registration"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        android:layout_margin="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_title">

    </EditText>

    <EditText
        android:id="@+id/et_Username_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_MobileNumber_registration"
        android:background="@drawable/editformat"
        android:hint="@string/Username_registration"
        android:maxLines="1"
        android:padding="16dp"
        android:textColorHint="@color/black"
        android:layout_margin="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_MobileNumber_registration">

    </EditText>

    <EditText
        android:id="@+id/et_email_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_Username_registration"
        android:background="@drawable/editformat"
        android:hint="@string/Email_registration"
        android:layout_margin="14dp"
        android:maxLines="1"
        android:textColorHint="@color/black"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Username_registration">

    </EditText>

    <EditText
        android:id="@+id/et_phone_no_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email_registration"
        android:background="@drawable/editformat"
        android:hint="@string/phone_registration"
        android:maxLines="1"
        android:textColorHint="@color/black"
        android:padding="16dp"
        android:layout_margin="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_registration">

    </EditText>

    <EditText
        android:id="@+id/et_password_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phone_no_registration"
        android:background="@drawable/editformat"
        android:hint="@string/password_login"
        android:textColorHint="@color/black"
        android:inputType="number"
        android:layout_margin="14dp"
        android:maxLines="1"
        android:padding="16dp"
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_no_registration">

    </EditText>

    <Button
        android:id="@+id/btn_next_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_registration"
        android:layout_centerInParent="true"
        android:layout_margin="14dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/authentication_btns"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_registration" />

    <ImageView
        android:id="@+id/imgcreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/et_MobileNumber_registration"
        app:layout_constraintEnd_toStartOf="@+id/txt_new_title"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_back_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>

